# haxpile-apptests

./: Setup.hs  default.hxp  haxpile-apptests.cabal  haxpile.bat  stack.yaml
src/HxpT/: T01_PrimAdd.hs  T02_FacRec.hs
