name:                haxpile-apptests
version:             0.1.0.0
homepage:            https://github.com/metaleap/haxpile-apptests
license:             GPL
license-file:        LICENSE
author:              metaleap
maintainer:          metaleap@mailbox.org
copyright:           Phil Schumann
category:            Misc
build-type:          Custom
cabal-version:       >=1.10

custom-setup
  setup-depends:
    base, haxpile

library
  default-language:    Haskell2010
  ghc-options:         -j2 -O0 -ddump-stg
  hs-source-dirs:      src
  build-depends:
    haxbase, haxpile,
    base
  exposed-modules:
    HxpT.T01_PrimAdd, HxpT.T02_FacRec
